force-app/main/default/objects/Capital_Requests__c/fields/Supplemental_New__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_New__c</fullName>
    <label>Supplemental/New</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>