force-app/main/default/objects/Capital_Requests__c/fields/Third_Party_Engineering__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Engineering__c</fullName>
    <description>Will Hill-Rom provide, either directly or through a third party, any engineering or development services, artwork, design work, plans, sketches or software design that will take place outside the United States and are necessary for the production of merchandise that is sent to the United States from another country?</description>
    <inlineHelpText>Will Hill-Rom provide, either directly or through a third party, any engineering or development services, artwork, design work, plans, sketches or software design that will take place outside the US and need for the production of US merchandise sent to US</inlineHelpText>
    <label>Third Party Engineering?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>