force-app/main/default/objects/Capital_Requests__c/fields/Third_Party_Materials__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Materials__c</fullName>
    <description>Will Hill-Rom provide, either directly or through a third party, any materials, components, parts, or similar items that will be incorporated or consumed into merchandise, outside of the United States, that is then sent to the United States?</description>
    <inlineHelpText>Will Hill-Rom provide, either directly or through a third party, any materials, components, parts, or similar items that will be incorporated or consumed into merchandise, outside of the United States, that is then sent to the United States?</inlineHelpText>
    <label>Third Party Materials?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>