force-app/main/default/objects/Capital_Requests__c/fields/Third_Party_Tools__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Tools__c</fullName>
    <description>Will Hill-Rom provide, either directly or through a third party, any tools, dies, molds, machinery, equipment, test equipment, and/or fixtures that will be used in the production of merchandise that is sent to the United States from another country?</description>
    <inlineHelpText>Will Hill-Rom provide, either directly or through a third party, any tools, dies, molds, machinery, equipment, test equipment, and/or fixtures that will be used in the production of merchandise that is sent to the United States from another country?</inlineHelpText>
    <label>Third Party Tools?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>