force-app/main/default/objects/Capital_Requests__c/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <description>Planned Budget Amount</description>
    <formula>Total_Capital_Budget__c +  Total_Expense_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Planned Budget Amount</inlineHelpText>
    <label>Total Budget (Plan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>