force-app/main/default/objects/Capital_Requests__c/fields/Total_Capital_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <description>IMPORTANT: This field is for Capital money already budgeted. The CFR requested amount needs to be added as a Capital Item.</description>
    <inlineHelpText>IMPORTANT: This field is for Capital money already budgeted. The CFR requested amount needs to be added as a Capital Item.</inlineHelpText>
    <label>Total Capital Budget (Plan)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>