force-app/main/default/objects/Capital_Requests__c/fields/Total_Capital_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Requested__c</fullName>
    <label>Total Capital Requested</label>
    <summarizedField>Capital_Iem__c.TotalRollup__c</summarizedField>
    <summaryForeignKey>Capital_Iem__c.Capital_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>