force-app/main/default/objects/Capital_Requests__c/fields/Total_Capital_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Capital_Variance__c</fullName>
    <formula>Total_Capital_Budget__c - Total_Capital_Requested__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Capital Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>