force-app/main/default/objects/Capital_Requests__c/fields/Total_CFR__c.field-meta.xml
<CustomField>
    <fullName>Total_CFR__c</fullName>
    <description>OLD Calc - Total_Capital_Requested__c + Total_Expense_Requested__c + Total_Supplemental_Amount__c + Internal_Resources__c</description>
    <formula>Total_Capital_Requested__c + Total_Expense_Requested__c + Internal_Resources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CFR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>