force-app/main/default/objects/Capital_Requests__c/fields/Total_Expense_Requested__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Requested__c</fullName>
    <label>Total Expense Requested</label>
    <summarizedField>Expense_Item__c.Total_for_Rollup__c</summarizedField>
    <summaryForeignKey>Expense_Item__c.Capital_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>