force-app/main/default/objects/Capital_Requests__c/fields/Total_Including_Internal_Labor__c.field-meta.xml
<CustomField>
    <fullName>Total_Including_Internal_Labor__c</fullName>
    <formula>Total_CFR__c + Internal_Resources__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Including Internal Labor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>