force-app/main/default/objects/Capital_Requests__c/fields/Total_Supplemental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Supplemental_Amount__c</fullName>
    <formula>Capital_Supplemental_Amount__c  +  Expense_Supplemental_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Supplemental Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>