force-app/main/default/objects/Capital_Requests__c/fields/Total_Variance__c.field-meta.xml
<CustomField>
    <fullName>Total_Variance__c</fullName>
    <formula>Total_Budget__c - (Total_Capital_Requested__c +Total_Expense_Requested__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>