force-app/main/default/objects/Capital_Requests__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <formula>IF(
      CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
      &apos;https://&apos;+
      MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4)
      +&apos;salesforce.com/&apos;,
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
  ) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL</label>
    <type>Text</type>
</CustomField>