force-app/main/default/objects/Capital_Requests__c/fields/WA_Capital_Steering_Committee__c.field-meta.xml
<CustomField>
    <fullName>WA_Capital_Steering_Committee__c</fullName>
    <defaultValue>&quot;Camil Chamoun, Heather McClanahan, Michael Arndt&quot;</defaultValue>
    <description>Delegated Approvers for Welch Allyn Capital Steering Committee</description>
    <inlineHelpText>Delegated Approvers for Welch Allyn Capital Steering Committee</inlineHelpText>
    <label>WA Capital Steering Committee</label>
    <length>100</length>
    <type>Text</type>
</CustomField>