force-app/main/default/objects/Capital_Requests__c/fields/Will_Hill_Rom_Provide_External_Services__c.field-meta.xml
<CustomField>
    <fullName>Will_Hill_Rom_Provide_External_Services__c</fullName>
    <description>If external, please provide vendor name and location (address) where tooling resides.</description>
    <inlineHelpText>If external, please provide vendor name and location (address) where tooling resides.</inlineHelpText>
    <label>Will Hill-Rom Provide External Services?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>