force-app/main/default/objects/Capital_Requests__c/recordTypes/CFR_Capital.recordType-meta.xml
<RecordType>
    <fullName>CFR_Capital</fullName>
    <active>true</active>
    <description>CFR Capital</description>
    <label>CFR Capital</label>
</RecordType>