force-app/main/default/objects/Capital_Requests__c/recordTypes/CFR_Capital_Planned.recordType-meta.xml
<RecordType>
    <fullName>CFR_Capital_Planned</fullName>
    <active>false</active>
    <description>CFR Capital Planned</description>
    <label>CFR Capital Planned</label>
</RecordType>