force-app/main/default/objects/Capital_Requests__c/recordTypes/CFR_Lease.recordType-meta.xml
<RecordType>
    <fullName>CFR_Lease</fullName>
    <active>true</active>
    <description>CFR Lease</description>
    <label>CFR Lease</label>
</RecordType>