force-app/main/default/objects/Capital_Requests__c/recordTypes/CFR_Lease_Planned.recordType-meta.xml
<RecordType>
    <fullName>CFR_Lease_Planned</fullName>
    <active>false</active>
    <description>CFR Lease Planned</description>
    <label>CFR Lease Planned</label>
</RecordType>