force-app/main/default/objects/Capital_Requests__c/validationRules/AreaAVP_Finance_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>AreaAVP_Finance_Required</fullName>
    <active>true</active>
    <description>Area AVP and Finance Director for Approval.</description>
    <errorConditionFormula>AND( 
$RecordType.Name=&apos;CFR Lease&apos; &amp;&amp;
ISBLANK(Area_AVP__c)&amp;&amp;
ISBLANK(Business_Finance_Director__c) &amp;&amp;
ISPICKVAL(Status__c, &apos;Draft&apos;) &amp;&amp;
DATEVALUE(CreatedDate) &gt; DATEVALUE(&quot;2019-02-08&quot;))</errorConditionFormula>
    <errorMessage>REQUIRED: Please add Area AVP and Finance Director for Approval.</errorMessage>
</ValidationRule>