force-app/main/default/objects/Capital_Requests__c/validationRules/Capital_Controller_and_ELT_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Capital_Controller_and_ELT_required</fullName>
    <active>true</active>
    <description>For CFR type of Capital, Controller/VP Finance is required if Total CFR Amount is greater than $250K.</description>
    <errorConditionFormula>Total_CFR__c &gt;= 250000 &amp;&amp; $RecordType.Name=&apos;CFR Capital&apos; &amp;&amp; ISBLANK( Op_Comp_CFO__c )</errorConditionFormula>
    <errorDisplayField>Op_Comp_CFO__c</errorDisplayField>
    <errorMessage>Controller/VP Finance is required if Total CFR Amount is greater than $250K. Add an approval for this level.</errorMessage>
</ValidationRule>