force-app/main/default/objects/Capital_Requests__c/validationRules/CFR_Cancelled_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>CFR_Cancelled_Closed</fullName>
    <active>true</active>
    <description>Prevent a user from changing the status from closed/cancelled .</description>
    <errorConditionFormula>AND( 
OR( 
ISPICKVAL( PRIORVALUE ( Status__c), &quot;Closed&quot;), 
ISPICKVAL( PRIORVALUE ( Status__c), &quot;Cancelled&quot;) 
),
ISCHANGED( Status__c), 
NOT ( $Profile.Name= &quot;System Administrator&quot;) 
)</errorConditionFormula>
    <errorMessage>You cannot Change Status after CFR has been Closed and Cancelled.</errorMessage>
</ValidationRule>