force-app/main/default/objects/Capital_Requests__c/validationRules/CFR_Company_Code_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CFR_Company_Code_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND 
(
ISPICKVAL(Status__c, &quot;Draft&quot;),
ISBlank(Company_Code__c)
)</errorConditionFormula>
    <errorDisplayField>Company_Code__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>