force-app/main/default/objects/Capital_Requests__c/validationRules/CFR_Require_vendor_address.validationRule-meta.xml
<ValidationRule>
    <fullName>CFR_Require_vendor_address</fullName>
    <active>true</active>
    <description>If Purchasing Tooling for internal or external the vendor Name and Address is required.</description>
    <errorConditionFormula>AND( 
ISPICKVAL(Purchasing_tooling_internal_external__c,&quot;Yes&quot;),
ISBLANK(If_Tooling_add_Vendor_Address__c ))</errorConditionFormula>
    <errorDisplayField>If_Tooling_add_Vendor_Address__c</errorDisplayField>
    <errorMessage>If Purchasing Tooling = Yes the vendor Name and Address is required.</errorMessage>
</ValidationRule>