force-app/main/default/objects/Capital_Requests__c/validationRules/JDE_CFR_Spend_in_progress.validationRule-meta.xml
<ValidationRule>
    <fullName>JDE_CFR_Spend_in_progress</fullName>
    <active>true</active>
    <errorConditionFormula>( (ISPICKVAL(Status__c , &apos;Draft&apos;)) || (ISPICKVAL(Status__c , &apos;Routed for Approval&apos;)) || (ISPICKVAL(Status__c , &apos;Rejected&apos;))  ) &amp;&amp; NOT(ISBLANK(JDE_CFR_Number__c ))</errorConditionFormula>
    <errorDisplayField>JDE_CFR_Number__c</errorDisplayField>
    <errorMessage>Status must be approved to enter JDE CFR Number.</errorMessage>
</ValidationRule>