force-app/main/default/objects/Capital_Requests__c/validationRules/Lease_Controller_VP_Finance_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lease_Controller_VP_Finance_required</fullName>
    <active>true</active>
    <description>For CFR type of Lease, Controller/VP Finance is required if Total CFR Amount is greater than $250K.</description>
    <errorConditionFormula>Total_CFR__c &gt;= 250000 &amp;&amp; $RecordType.Name=&apos;CFR Lease&apos; &amp;&amp; ISBLANK( Op_Comp_CFO__c )</errorConditionFormula>
    <errorDisplayField>Op_Comp_CFO__c</errorDisplayField>
    <errorMessage>Controller/VP Finance is required if Total CFR Amount is greater than $250K. Add an approval for this level.</errorMessage>
</ValidationRule>