force-app/main/default/objects/Capital_Requests__c/validationRules/Verify_Board_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Verify_Board_Approval</fullName>
    <active>true</active>
    <description>Fixed Assets will check to indicate Board Approval for CFR&apos;s over $10 Million</description>
    <errorConditionFormula>AND( 
OR( 
$RecordType.Id = &quot;012E000000065Gq&quot; /* Capital */, 
$RecordType.Id = &quot;012E000000065Gr&quot; /* Lease */ 
), 

$Profile.Name &lt;&gt; &quot;CFR Fixed Assets&quot; 

&amp;&amp;ISPICKVAL(Status__c, &quot;Spend in Progress&quot;), 
NOT Board_Approved__c = TRUE, 
Total_CFR__c &gt; 10000000 
)</errorConditionFormula>
    <errorDisplayField>Board_Approved__c</errorDisplayField>
    <errorMessage>Fixed Assets will check to indicate Board Approval for CFR&apos;s over $10 Million</errorMessage>
</ValidationRule>