force-app/main/default/objects/Capital_Requests__c/listViews/All6.listView-meta.xml
<ListView>
    <fullName>All6</fullName>
    <columns>NAME</columns>
    <columns>JDE_CFR_Number__c</columns>
    <columns>Status__c</columns>
    <columns>current_approver_of_CFR__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Objective__c</columns>
    <columns>DivisionBS__c</columns>
    <columns>Business_Segment__c</columns>
    <columns>Total_CFR__c</columns>
    <columns>Total_Budget__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>rose</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>