force-app/main/default/objects/Capital_Requests__c/listViews/All_Capital_CFR_Requests.listView-meta.xml
<ListView>
    <fullName>All_Capital_CFR_Requests</fullName>
    <columns>NAME</columns>
    <columns>JDE_CFR_Number__c</columns>
    <columns>Status__c</columns>
    <columns>current_approver_of_CFR__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Project_Name_Link__c</columns>
    <columns>Project_Objective__c</columns>
    <columns>Business_Segment__c</columns>
    <columns>Total_CFR__c</columns>
    <columns>Total_Budget__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Segment__c</field>
        <operation>equals</operation>
        <value>Trumpf - US</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Routed for Approval,Approved,Spend in Progress</value>
    </filters>
    <label>All Capital CFR Requests</label>
</ListView>