force-app/main/default/objects/Capital_Requests__c/listViews/All_Lotus_Notes_CFRs_Closed.listView-meta.xml
<ListView>
    <fullName>All_Lotus_Notes_CFRs_Closed</fullName>
    <columns>JDE_CFR_Number__c</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Division__c</columns>
    <columns>Total_CFR__c</columns>
    <columns>Total_Budget__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_of_first__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Actual_Completion_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CFR_is_Confidential__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Notes_External_ID__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>contains</operation>
        <value>Data</value>
    </filters>
    <filters>
        <field>Business_Segment__c</field>
        <operation>notEqual</operation>
        <value>Welch Allyn</value>
    </filters>
    <label>All Lotus Notes CFRs (Closed)</label>
    <language>en_US</language>
</ListView>