force-app/main/default/objects/Capital_Requests__c/listViews/CFR_All_Capital.listView-meta.xml
<ListView>
    <fullName>CFR_All_Capital</fullName>
    <columns>JDE_CFR_Number__c</columns>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>current_approver_of_CFR__c</columns>
    <columns>Status__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Total_CFR__c</columns>
    <columns>Total_Budget__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <columns>Financial_Analyst__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Data</value>
    </filters>
    <filters>
        <field>CFR_is_Confidential__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Project_Name_Link__c</field>
        <operation>notContain</operation>
        <value>*</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Capital_Requests__c.CFR_Capital</value>
    </filters>
    <filters>
        <field>Financial_Analyst__c</field>
        <operation>contains</operation>
        <value>Monica</value>
    </filters>
    <label>CFR All Capital</label>
</ListView>