force-app/main/default/objects/Capital_Requests__c/listViews/CFR_Approved.listView-meta.xml
<ListView>
    <fullName>CFR_Approved</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Project_Name_Link__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>DivisionBS__c</columns>
    <columns>Business_Segment__c</columns>
    <columns>Total_CFR__c</columns>
    <columns>Total_Budget__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Supplemental_Check__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CFR_is_Confidential__c</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>notContain</operation>
        <value>Warehouse</value>
    </filters>
    <label>CFR Approved</label>
    <language>en_US</language>
</ListView>